best-practices-vpol/disallow-latest-tag/.chainsaw-test/bad-pod-latest-fail-first.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-latest
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:latest
  - name: nginx
    image: ghcr.io/kyverno/test-nginx:1.35
