best-practices-vpol/disallow-latest-tag/.chainsaw-test/bad-pod-no-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-no-tag
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox
  - name: nginx
    image: ghcr.io/kyverno/test-nginx:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-no-tag
spec:
  containers:
  - name: nginx
    image: ghcr.io/kyverno/test-nginx:1.35
  - name: busybox
    image: ghcr.io/kyverno/test-busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-no-tag
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox
  - name: nginx
    image: ghcr.io/kyverno/test-nginx:latest
