best-practices-vpol/disallow-latest-tag/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-ht
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
