best-practices-vpol/disallow-latest-tag/.chainsaw-test/init-latest-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-latest-pod
spec:
  initContainers:
  - name: init
    image: busybox:latest
  containers:
  - name: app
    image: busybox:1.36
