best-practices-vpol/disallow-latest-tag/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-latest-tag
status:
  conditionStatus:
    conditions:
    - reason: Succeeded
      type: WebhookConfigured
      status: "True"
    - reason: Succeeded
      type: RBACPermissionsGranted
      status: "True"
