best-practices-vpol/disallow-latest-tag/.chainsaw-test/rbac-ephemeralcontainers-reports.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno-policy-test-ephemeralcontainers-reports
  labels:
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
rules:
- apiGroups: [""]
  resources: [pods, pods/ephemeralcontainers]
  verbs: [get, list, watch]
